Push a fix for Ryan & Kvng's cut off heads 😂

--- a/assets/css/pages/_student.scss
+++ b/assets/css/pages/_student.scss
@@ -666,6 +666,12 @@ $student-profile-header-background: #f6f6f6;
 		&.c564f9255e7679d3cd0f73ec0 {
 			bottom: -160px;
 		}
+		&.c564f9255e7679d3cd0f73eb6 {
+			bottom: -160px;
+		}
+		&.c564f9255e7679d3cd0f73ed8 {
+			bottom: -150px;
+		}
 	}
 }
 
